[gd_scene load_steps=23 format=3 uid="uid://crvptphshx3l7"]

[ext_resource type="Texture2D" uid="uid://dmp23clg7m4xb" path="res://Scenes/Character/Player/Asset/frog_armor.png" id="1_1j3ov"]
[ext_resource type="Script" uid="uid://bdhkscstpu75b" path="res://Scenes/Character/Player/Player.gd" id="1_gvmva"]
[ext_resource type="PackedScene" uid="uid://5u61rs18y8k8" path="res://Scenes/Weapon/Guns/Bow/Bow.tscn" id="3_dj2t7"]
[ext_resource type="Script" uid="uid://bgox7ty3piajd" path="res://Scenes/Character/CharacterStats.gd" id="3_f0b02"]
[ext_resource type="PackedScene" uid="uid://c6xc5t2lii4pj" path="res://Scenes/Weapon/Flail/flail.tscn" id="6_3gn43"]
[ext_resource type="Script" uid="uid://diatversdlecu" path="res://Scenes/Character/Player/PlayerInteraction.gd" id="7_3gn43"]
[ext_resource type="Texture2D" uid="uid://8qlseac4sj8q" path="res://Scenes/Weapon/Lance/lance.png" id="7_im63d"]
[ext_resource type="Texture2D" uid="uid://lk6xa04s1mm8" path="res://Scenes/UI/Interaction/E_Key.png" id="8_f0b02"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7qy38"]
atlas = ExtResource("1_1j3ov")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gn43"]
atlas = ExtResource("1_1j3ov")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0b02"]
atlas = ExtResource("1_1j3ov")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw8fk"]
atlas = ExtResource("1_1j3ov")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yty6f"]
atlas = ExtResource("1_1j3ov")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_noogm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qy38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gn43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0b02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw8fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yty6f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_11mtv"]

[sub_resource type="Animation" id="Animation_0kpiw"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View/Sprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1.2, 0, 0.1, 1, 0, 0.8, 0, 0.2, 1, 0, 1.2, 0, 0.3, 1, 0, 0.8, 0, 0.4, 1, 0, 1.2, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Sprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.383, 0, 0, 0.924, 0.1, 1, -0.379, -0.05, -0.121, 0.916, 0.2, 1, -0.383, 0, 0, 0.924, 0.3, 1, -0.379, 0.05, 0.121, 0.916, 0.4, 1, -0.383, 0, 0, 0.924)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqr71"]
_data = {
&"Walk": SubResource("Animation_0kpiw")
}

[sub_resource type="Animation" id="Animation_8vurq"]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View/Sprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_30x3r"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.5058824, 0.5058824, 0.5058824, 0.44313726)]
}

[sub_resource type="Animation" id="Animation_lq7hj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vurq"]
_data = {
&"Damage": SubResource("Animation_8vurq"),
&"Death": SubResource("Animation_30x3r"),
&"RESET": SubResource("Animation_lq7hj")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7qy38"]
radius = 3.0

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_gvmva")

[node name="View" type="Node3D" parent="."]

[node name="Sprite" type="AnimatedSprite3D" parent="View"]
unique_name_in_owner = true
transform = Transform3D(0.99999994, 0, 0, 0, 0.70675814, 0.7074548, 0, -0.7074548, 0.70675814, 0, 1.2, 0)
pixel_size = 0.05
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_noogm")
autoplay = "default"

[node name="CharacterStats" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_f0b02")
SPEED = 8.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_11mtv")

[node name="Camera Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.86602557, 0.5000001, 0, -0.5000001, 0.86602557, 0, 0, 0)

[node name="Camera3D Close" type="Camera3D" parent="Camera Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.99875563, 0.04987835, 0, -0.04987835, 0.99875563, 0, 1.364158, 3.74229)
fov = 100.0

[node name="Camera3D Far" type="Camera3D" parent="Camera Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.788945, 0.614464, 0, -0.614464, 0.788945, 0, 6.83338, 6.956)
current = true
fov = 100.0

[node name="Vision" type="Node3D" parent="Camera Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.86602515, -0.49999988, 0, 0.49999988, 0.86602515, 0, 0, 0)

[node name="PlayerLight" type="OmniLight3D" parent="Camera Pivot/Vision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8320885, 0)
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 0.1

[node name="Walk Animation Player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sqr71")
}

[node name="Status Animation Player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8vurq")
}

[node name="Weapons" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Bow" parent="Weapons" instance=ExtResource("3_dj2t7")]
enabled = true

[node name="Flail" parent="Weapons" instance=ExtResource("6_3gn43")]

[node name="Lance" type="Node3D" parent="Weapons"]
visible = false

[node name="Sprite" type="Sprite3D" parent="Weapons/Lance"]
transform = Transform3D(0.676272, -0.736652, -3.22001e-08, -1.18108e-16, -4.37114e-08, 1, -0.736652, -0.676272, -2.95608e-08, 0.293473, -0.0965916, -1.07363)
pixel_size = 0.07
texture_filter = 0
texture = ExtResource("7_im63d")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("7_3gn43")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_7qy38")

[node name="Timer" type="Timer" parent="InteractionArea"]
wait_time = 0.5
autostart = true

[node name="Node" type="Node" parent="InteractionArea"]

[node name="InteractionUI" type="Node3D" parent="InteractionArea/Node"]
unique_name_in_owner = true
visible = false

[node name="Sprite3D" type="Sprite3D" parent="InteractionArea/Node/InteractionUI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
pixel_size = 0.008
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
texture = ExtResource("8_f0b02")

[connection signal="area_entered" from="InteractionArea" to="InteractionArea" method="_on_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="InteractionArea" method="_on_area_exited"]
[connection signal="timeout" from="InteractionArea/Timer" to="InteractionArea" method="find_closest_interactable"]
